<resources>
    <string name="app_name">Bug App</string>
    <string name="welcome_msg">Welcome to Bug App</string>
    <string name="hint_author">Enter Author Name</string>
    <string name="hint_password">Enter Password</string>
    <string name="btn_login">Login</string>
    <string name="dashboard_title">Bug Tool Dashboard</string>
    <string name="hint_target">Enter Target Number/Email</string>
    <string name="btn_bug_wa">Bug WA</string>
    <string name="btn_bug_group">Bug Group</string>
    <string name="btn_bug_email">Bug Email</string>
    <string name="invalid_creds">Invalid credentials</string>
    <string name="enter_target">Please enter a target</string>
</resources>
